get the initial thing working

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,8 +1,11 @@
-# Use Python 3.12 as base image
-FROM python:3.12-slim
+# Use NVIDIA CUDA base image
+FROM nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
 
-# Install system dependencies for audio, CUDA, and livekit-rtc
-RUN apt-get update && apt-get install -y \
+# Set frontend to noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Install Python 3.12 and other system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
     libasound2-dev \
@@ -11,7 +14,18 @@ RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
     ffmpeg \
+    software-properties-common \
+    && add-apt-repository -y ppa:deadsnakes/ppa \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
+    python3.12 \
+    python3.12-dev \
+    python3.12-venv \
     && rm -rf /var/lib/apt/lists/*
+
+# Make python3.12 the default python
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.12 1
+
 
 # Install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
