--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "livekit-plugins-openai>=1.0.0",
     "livekit-plugins-silero>=1.0.0",
     "python-dotenv>=1.0.0",
+    "torch>=2.9.1",
+    "torchaudio>=2.9.1",
 ]
 
 [project.optional-dependencies]
