add wake word to client

--- a/client/pyproject.toml
+++ b/client/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "livekit>=1.0.0",
     "livekit-api>=1.0.0",
     "numpy>=2.3.5",
+    "pvporcupine>=4.0.1",
     "pyaudio>=0.2.14",
     "python-dotenv>=1.0.0",
     "sounddevice>=0.4.7",
