--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
+    "uvicorn",
+    "fastapi",
 ]
 
 [project.optional-dependencies]
